syntax = "proto3";

package user.v1;

import "user/v1/list_users.proto";
import "user/v1/get_user.proto";
import "user/v1/create_user.proto";
import "user/v1/update_user.proto";
import "user/v1/delete_user.proto";

service UserService {
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
